syntax = "proto3";

package files;

service FilesService {
  rpc GetAllForOwner (FilesByOwnerId) returns (Files);
}

message FilesByOwnerId {
  string ownerId = 1;
}

message File {
  string id = 1;
  string ownerId = 2;
  string url = 3;
}

message Files {
  repeated File = 1;
}